# ElectronLink

./: CMakeLists.txt  README.md  main.cpp  smbus.h  smbus_linux.cpp  smbus_windows.cpp
test/: smbus_test.x
